@@ -21,20 +21,36 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.io.Writable;
 
-/** A {@link Writable} interface for storing user and groups information.
+/** A {@link Writable} abstract class for storing user and groups information.
  */
-public interface UserGroupInformation extends Writable {
+public abstract class UserGroupInformation implements Writable {
   public static final Log LOG = LogFactory.getLog(UserGroupInformation.class);
+
+  private static final ThreadLocal<UserGroupInformation> currentUGI
+    = new ThreadLocal<UserGroupInformation>();
+
+  /** @return the {@link UserGroupInformation} for the current thread */ 
+  public static UserGroupInformation getCurrentUGI() {
+    return currentUGI.get();
+  }
+
+  /** Set the {@link UserGroupInformation} for the current thread */ 
+  public static void setCurrentUGI(UserGroupInformation ugi) {
+    if (LOG.isDebugEnabled()) {
+      LOG.debug(Thread.currentThread().getName() + ", ugi=" + ugi);
+    }
+    currentUGI.set(ugi);
+  }
 
   /** Get username
    * 
    * @return the user's name
    */
-  public String getUserName();
+  public abstract String getUserName();
   
   /** Get the name of the groups that the user belong to
    * 
    * @return an array of group names
    */
-  public String[] getGroupNames();
+  public abstract String[] getGroupNames();
 }
